Atualizar composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "d4sign/d4sign-php",
+    "name": "memocashweb/d4sign-php",
     "type": "package",
     "minimum-stability": "dev",
     "version": "1.2",
